# esp-rs-devcontainer

./: .gitpod.Dockerfile  .gitpod.yml  README.md  build.sh  flash.html  flash.sh  manifest.json  run-wokwi.sh  wokwi-server.py
.devcontainer/: Dockerfile  devcontainer.json  postStart.sh
test/: Cargo.toml
test/src/: main.rs
webflash/: manifest.json
wokwi/: run.sh  wokwi-server.py
